--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -303,6 +303,8 @@
     <string name="auto_play_video_summary">Reproduzir o vídeo automaticamente durante a visualização de mídia</string>
     <string name="shared_elements">Animar itens de mídia</string>
     <string name="shared_elements_summary">Animar o clique/retorno de itens de mídia usando transições de elementos compartilhados</string>
+    <string name="mosaic_grid">Mosaic Grid</string>
+    <string name="mosaic_grid_info">Show media in a mosaic grid</string>
     <plurals name="item_count">
         <item quantity="one">%s ítem</item>
         <item quantity="other">%s ítens</item>
