--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -303,6 +303,8 @@
     <string name="auto_play_video_summary">Воспроизводить видео автоматически при просмотра медиа</string>
     <string name="shared_elements">Анимированные медиа элементы</string>
     <string name="shared_elements_summary">Анимируйте нажатие / возврат медиа элементов с помощью общих элементов перехода</string>
+    <string name="mosaic_grid">Mosaic Grid</string>
+    <string name="mosaic_grid_info">Show media in a mosaic grid</string>
     <plurals name="item_count">
         <item quantity="one">%s элемент</item>
         <item quantity="few">%s эл.</item>
