--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -303,6 +303,8 @@
     <string name="auto_play_video_summary">Відтворювати відео автоматично під час перегляду медіа</string>
     <string name="shared_elements">Анімовані медіа елементи</string>
     <string name="shared_elements_summary">Анімуйте натискання / повернення медіа елементів за допомогою спільних елементів переходу</string>
+    <string name="mosaic_grid">Mosaic Grid</string>
+    <string name="mosaic_grid_info">Show media in a mosaic grid</string>
     <plurals name="item_count">
         <item quantity="one">%s елемент</item>
         <item quantity="few">%s елементи</item>
