--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -303,6 +303,8 @@
     <string name="auto_play_video_summary">查看媒体时自动播放视频</string>
     <string name="shared_elements">为媒体项目应用动画</string>
     <string name="shared_elements_summary">用共享元素过渡来作为媒体项目的点击/返回动画</string>
+    <string name="mosaic_grid">Mosaic Grid</string>
+    <string name="mosaic_grid_info">Show media in a mosaic grid</string>
     <plurals name="item_count">
         <item quantity="other">%s 个项目</item>
     </plurals>
