Prototype of a "Music" Tab
i wanted ti add a "Music" tab, still, this is a prototype, i don't know neither how to add audio files into the app nor how to filter them properly, but i'm trying anyways

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -324,6 +324,7 @@
     <string name="select_a_vault">Select a vault</string>
     <string name="mosaic_grid">Mosaic Grid</string>
     <string name="mosaic_grid_info">Show media in a mosaic grid</string>
+    <string name="Music">Music</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
