Add ignore feature for media
- Add `ignored` column to media, classified_media, and encrypted_media tables.
- Add option in selection sheet to toggle media as ignored.
- Add `getMediaIgnored` method to MediaDao.
- Add `setMediaIgnored` methods to MediaDao and MediaRepository.
- Add `toggleIgnored` method to MediaHandleUseCase to toggle if the media is ignored or not.
- Modify `MediaState` to filter out ignored media.
- Update InternalDatabase version to 8 and implement AutoMigration from version 7 to 8.

--- a/app/src/main/res/values-fr-rFR/strings.xml
+++ b/app/src/main/res/values-fr-rFR/strings.xml
@@ -305,6 +305,7 @@
     <string name="shared_elements_summary">Animer le clic/retour d\'un média à l\'aide des transitions d\'éléments partagés</string>
     <string name="mosaic_grid">Mosaic Grid</string>
     <string name="mosaic_grid_info">Show media in a mosaic grid</string>
+    <string name="ignore">Ignore</string>
     <plurals name="item_count">
         <item quantity="one">%s élément</item>
         <item quantity="other">%s éléments</item>
