--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -305,6 +305,7 @@
     <string name="shared_elements_summary">Animasikan klik media atau saat kembali menggunakan transisi elemen standar</string>
     <string name="mosaic_grid">Mosaic Grid</string>
     <string name="mosaic_grid_info">Show media in a mosaic grid</string>
+    <string name="ignore">Ignore</string>
     <plurals name="item_count">
         <item quantity="other">%sitem</item>
     </plurals>
