feat: Add IgnoredMediaScreen
This commit introduces the `IgnoredMediaScreen` to display ignored media files. It includes the following changes:

-   Created `EmptyIgnoredMedia` composable for empty state display.
-   Created `IgnoredMediaNavActions` composable for managing actions on ignored media.
-   Created `IgnoredMediaScreen` composable to handle the screen's UI and logic.
-   Modified `MediaViewModel` to support ignored media retrieval.
-   Updated `MediaHandleUseCase` to handle media unignore operations.
-   Added new routes to `Screen` for navigation.
-   Updated `AppBar` to include the Ignored media option.
- Updated Navigation component to add `IgnoredMediaScreen` route.

--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -306,6 +306,8 @@
     <string name="mosaic_grid">Mosaic Grid</string>
     <string name="mosaic_grid_info">Show media in a mosaic grid</string>
     <string name="ignore">Ignore</string>
+    <string name="empty_ignored_title">You have no ignored</string>
+    <string name="ignored_media">Ignored Media</string>
     <plurals name="item_count">
         <item quantity="other">%s アイテム</item>
     </plurals>
