--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -197,7 +197,7 @@
     <string name="individual_album_selection">Pemilihan Album Individual</string>
     <string name="wildcard_creator">Pembuat Wildcard</string>
     <string name="wildcard_summary">Karakter pengganti akan digunakan untuk mencocokkan nama album atau jalurnya. Karakter pengganti dapat diperlakukan sebagai pola regex.</string>
-    <string name="wildcard_summary_first"></string>
+    <string name="wildcard_summary_first">Wildcard: %1$s</string>
     <string name="matched_albums">"Album yang cocok: %1$s"</string>
     <string name="go_back">Kembali</string>
     <string name="continue_string">Melanjutkan</string>
@@ -227,7 +227,7 @@
     <string name="setup_type_regex_title">Pola Regex</string>
     <string name="setup_type_regex_subtitle">Membuat pola seleksi</string>
     <string name="setup_type_regex_example_title">Contoh</string>
-    <string name="setup_type_regex_example_first_title">Cocokkan album apa pun langsung di bawah folder Musik:</string>
+    <string name="setup_type_regex_example_first_title">Matched albums: %2$s</string>
     <string name="setup_type_regex_first_subtitle">.*/Musik/[^/]+/?$</string>
     <string name="setup_type_regex_example_second_title">Cocokkan album apa pun di bawah folder Musik dan subfoldernya:</string>
     <string name="setup_type_regex_example_second_subtitle">.*/Musik/.+/[^/]+/?$</string>
@@ -311,4 +311,12 @@
     <plurals name="item_count">
         <item quantity="other">%sitem</item>
     </plurals>
+    <string name="type_stylus">Stylus</string>
+    <string name="type_highlighter">Highlighter</string>
+    <string name="type_marker">Marker</string>
+    <string name="type_erase">Eraser</string>
+    <string name="crop">Crop</string>
+    <string name="adjust">Adjust</string>
+    <string name="filters">Filters</string>
+    <string name="markup">Markup</string>
 </resources>
