--- a/app/src/main/res/values-pl-rPL/strings.xml
+++ b/app/src/main/res/values-pl-rPL/strings.xml
@@ -227,7 +227,7 @@
     <string name="setup_type_regex_title">Wzorzec Regex</string>
     <string name="setup_type_regex_subtitle">Tworzenie wzorca wyboru</string>
     <string name="setup_type_regex_example_title">Przykłady</string>
-    <string name="setup_type_regex_example_first_title"></string>
+    <string name="setup_type_regex_example_first_title">Match any album directly under the Music folder:</string>
     <string name="setup_type_regex_first_subtitle">.*/Muzyka/[^/]+/?$</string>
     <string name="setup_type_regex_example_second_title">Dopasuj dowolny album w folderze Muzyka i jego podfolderach:</string>
     <string name="setup_type_regex_example_second_subtitle">.*/Muzyka/.+/[^/]+/?$</string>
@@ -314,4 +314,12 @@
         <item quantity="many">%s pozycji</item>
         <item quantity="other">%s pozycji</item>
     </plurals>
+    <string name="type_stylus">Stylus</string>
+    <string name="type_highlighter">Highlighter</string>
+    <string name="type_marker">Marker</string>
+    <string name="type_erase">Eraser</string>
+    <string name="crop">Crop</string>
+    <string name="adjust">Adjust</string>
+    <string name="filters">Filters</string>
+    <string name="markup">Markup</string>
 </resources>
