Enhance tag-based filtering and add media orientation and dimensions to media objects
- Add support for filtering media by orientation (90, 180, 270 degrees) and dimensions (horizontal, vertical) through tags.
- Implement tag-based filtering logic in `MediaViewModel` to include new orientation and dimension tags.
- Update database schema to version 9 to support storing height, width, and orientation.
- Add `height`, `width`, and `orientation` fields to the `Media` model.
- Modify `MediaFlow` and `MediaUriFlow` to retrieve and populate height, width, and orientation data.
- Update `TagsGrid` to display localized tag strings.
- Update MediaStore to query for height, width, and orientation.
- Update `Tags` enum to add new tags and icons.

--- a/app/src/main/res/values-hr-rHR/strings.xml
+++ b/app/src/main/res/values-hr-rHR/strings.xml
@@ -321,4 +321,12 @@
     <string name="adjust">Adjust</string>
     <string name="filters">Filters</string>
     <string name="markup">Markup</string>
+    <string name="tag_favorite">favorite</string>
+    <string name="tag_image">image</string>
+    <string name="tag_video">video</string>
+    <string name="tag_rotated90">rotated90</string>
+    <string name="tag_rotated180">rotated180</string>
+    <string name="tag_rotated270">rotated270</string>
+    <string name="tag_vertical">vertical</string>
+    <string name="tag_horizontal">horizontal</string>
 </resources>
