--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -327,6 +327,14 @@
     <string name="ignore">Ignore</string>
     <string name="empty_ignored_title">You have no ignored</string>
     <string name="ignored_media">Ignored Media</string>
+    <string name="tag_favorite">favorite</string>
+    <string name="tag_image">image</string>
+    <string name="tag_video">video</string>
+    <string name="tag_rotated90">rotated90</string>
+    <string name="tag_rotated180">rotated180</string>
+    <string name="tag_rotated270">rotated270</string>
+    <string name="tag_vertical">vertical</string>
+    <string name="tag_horizontal">horizontal</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
