Add tags for location metadata
Adds tags for media with and without location metadata, and displays them in the search tags grid.
Adds `getUri()` extension function to get the Uri of a node.
Adds `getExifInterface()` extension function to get the ExifInterface of a node.
Adds enum class `MetadataTagsType` to represent location tags.

--- a/app/src/main/res/values-hr-rHR/strings.xml
+++ b/app/src/main/res/values-hr-rHR/strings.xml
@@ -329,4 +329,6 @@
     <string name="tag_rotated270">rotated270</string>
     <string name="tag_vertical">vertical</string>
     <string name="tag_horizontal">horizontal</string>
+    <string name="tag_withlocation">withlocation</string>
+    <string name="tag_withoutlocation">withoutlocation</string>
 </resources>
