Refactor: Improve search tag filtering and history
- Add filtering by country and locality tags in `MediaViewModel`.
- Add countries and localities to search history.
- Add a new `LocationTagsGrid` component.
- Expand `TagsGrid` to show more tags.
- Move recent tags above regular tags.
- Add a title to each grid.
- Remove padding and fix grid spacing.
- Remove unused code.
- Add new icons.

--- a/app/src/main/res/values-ga-rIE/strings.xml
+++ b/app/src/main/res/values-ga-rIE/strings.xml
@@ -333,4 +333,6 @@
     <string name="tag_horizontal">horizontal</string>
     <string name="tag_withlocation">withlocation</string>
     <string name="tag_withoutlocation">withoutlocation</string>
+    <string name="tag_country">country</string>
+    <string name="tag_locality">locality</string>
 </resources>
