--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -337,6 +337,8 @@
     <string name="tag_horizontal">horizontal</string>
     <string name="tag_withlocation">withlocation</string>
     <string name="tag_withoutlocation">withoutlocation</string>
+    <string name="tag_country">country</string>
+    <string name="tag_locality">locality</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
