Refactor: Update Media Analyzer Worker and add notification permission
- Update the Media Analyzer Worker to show progress.
- Add notification permission to the required permissions.
- Add notification summary to the permissions list.
- Remove unnecessary coroutine scope.
- Remove unused code.
- Update the way notification is created.

--- a/app/src/main/res/values-ar-rSA/strings.xml
+++ b/app/src/main/res/values-ar-rSA/strings.xml
@@ -336,4 +336,6 @@
     <string name="tag_withoutlocation">withoutlocation</string>
     <string name="tag_country">country</string>
     <string name="tag_locality">locality</string>
+    <string name="notification">Notification</string>
+    <string name="notification_summary">Permit the app to show notification about analysis of local media, when new media are detected</string>
 </resources>
