Refactor: Enhance analysis worker and add utility functions
- Introduce `isAtLeastAndroid15` flag to handle Android 15 specific behaviors.
- Implement `conditional` modifier for applying modifiers based on a condition.
- Update `AnalyzerWorker` to use `isAtLeastAndroid15` for enhanced notification display.
- Adjust notification content title and message based on API level.
- Add stop action label and notification configuration.
- Adjust notification progress appearance.
- Add specific foreground service types based on API level.
- Update Android Manifest, request `WRITE_EXTERNAL_STORAGE` until Android 10 (API 29), and enable `requestLegacyExternalStorage`.
- Add foreground service permission for data sync and media processing.

--- a/app/src/main/res/values-ga-rIE/strings.xml
+++ b/app/src/main/res/values-ga-rIE/strings.xml
@@ -337,4 +337,6 @@
     <string name="tag_locality">locality</string>
     <string name="notification">Notification</string>
     <string name="notification_summary">Permit the app to show notification about analysis of local media, when new media are detected</string>
+    <string name="analyzing_media">Analyzing media</string>
+    <string name="action_stop">Stop</string>
 </resources>
