--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -303,6 +303,7 @@
     <string name="auto_play_video_summary">Reproduzir o vídeo automaticamente durante a visualização de mídia</string>
     <string name="shared_elements">Animar itens de mídia</string>
     <string name="shared_elements_summary">Animar o clique/retorno de itens de mídia usando transições de elementos compartilhados</string>
+    <string name="select_a_vault">Select a vault</string>
     <string name="mosaic_grid">Mosaic Grid</string>
     <string name="mosaic_grid_info">Show media in a mosaic grid</string>
     <string name="ignore">Ignore</string>
@@ -336,4 +337,14 @@
     <string name="notification_summary">Permit the app to show notification about analysis of local media, when new media are detected</string>
     <string name="analyzing_media">Analyzing media</string>
     <string name="action_stop">Stop</string>
+    <string name="type_size">Size</string>
+    <string name="encrypting_media">Encrypting media...</string>
+    <string name="decrypt_vault">Decrypt Vault</string>
+    <string name="restore_vault_summary">The current vault and its content will be decrypted and restored.</string>
+    <string name="restore_vault_title">Confirm Decryption?</string>
+    <string name="yes">Yes</string>
+    <string name="vault_deletion_title">Confirm Deletion?</string>
+    <string name="vault_deletion_summary">The current vault and its content will be deleted permanently.</string>
+    <string name="create_new_vault_title">Create new vault?</string>
+    <string name="create_new_vault_summary">The vault will be accessed using your phone security measures (password or biometrics)</string>
 </resources>
