feat: Add album tag and album tag filter
- Add "album" tag to string resources in multiple languages.
- Implement `AlbumsTagsGrid` composable for displaying album tags.
- Add album tag filtering capability to `MediaViewModel`.
- Integrate album tags into `SearchHistoryGrid`.
- Add album icon.

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -343,6 +343,7 @@
     <string name="notification_summary">Permit the app to show notification about analysis of local media, when new media are detected</string>
     <string name="analyzing_media">Analyzing media</string>
     <string name="action_stop">Stop</string>
+    <string name="tag_album">album</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
