Add support for month-based filtering
- Implemented filtering of media by month.
- Added `MonthTagsType` enum to represent months.
- Added a new `MonthTagsGrid` composable to display month-based filters.
- Modified `MediaViewModel` to handle month-based tags.
- Updated `SearchHistoryGrid` to include `MonthTagsGrid`.
- Modified search logic to consider month.
- `SearchHistory` refactor. Change map with mapNotNull on location tags.

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -344,6 +344,18 @@
     <string name="analyzing_media">Analyzing media</string>
     <string name="action_stop">Stop</string>
     <string name="tag_album">album</string>
+    <string name="tag_january">january</string>
+    <string name="tag_february">february</string>
+    <string name="tag_march">march</string>
+    <string name="tag_april">april</string>
+    <string name="tag_may">may</string>
+    <string name="tag_june">june</string>
+    <string name="tag_july">july</string>
+    <string name="tag_august">august</string>
+    <string name="tag_september">september</string>
+    <string name="tag_october">october</string>
+    <string name="tag_november">november</string>
+    <string name="tag_december">december</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
