Refactor: Update UI and add DayTags
- Replace shimmer effect with a circular progress indicator in `LoadingMedia`
- Add `hideProgressIndicator` parameter in `LoadingMedia` and `EmptyMedia` to manage progress indicator visibility
- Replace the empty media placeholder with a visual icon and title
- Update tag icon and add new Day tags
- Remove shimmer effect in search screen
- Fix UI issues.

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -356,6 +356,13 @@
     <string name="tag_october">october</string>
     <string name="tag_november">november</string>
     <string name="tag_december">december</string>
+    <string name="tag_monday">monday</string>
+    <string name="tag_tuesday">tuesday</string>
+    <string name="tag_wednesday">wednesday</string>
+    <string name="tag_thursday">thursday</string>
+    <string name="tag_friday">friday</string>
+    <string name="tag_saturday">saturday</string>
+    <string name="tag_sunday">sunday</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
