--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -356,6 +356,13 @@
     <string name="tag_october">october</string>
     <string name="tag_november">november</string>
     <string name="tag_december">december</string>
+    <string name="tag_monday">monday</string>
+    <string name="tag_tuesday">tuesday</string>
+    <string name="tag_wednesday">wednesday</string>
+    <string name="tag_thursday">thursday</string>
+    <string name="tag_friday">friday</string>
+    <string name="tag_saturday">saturday</string>
+    <string name="tag_sunday">sunday</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
