Refactor: Rename CategoriesScreen to SmartCategoriesScreen
This commit renames `CategoriesScreen` to `SmartCategoriesScreen` to better reflect its purpose. It also removes unused code and updates the top bar title accordingly. The navigation is adjusted to use the new `SmartCategoriesScreen`.

--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -366,4 +366,5 @@
     <string name="tag_friday">friday</string>
     <string name="tag_saturday">saturday</string>
     <string name="tag_sunday">sunday</string>
+    <string name="smart_categories">Smart Categories</string>
 </resources>
