--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -363,6 +363,7 @@
     <string name="tag_friday">friday</string>
     <string name="tag_saturday">saturday</string>
     <string name="tag_sunday">sunday</string>
+    <string name="smart_categories">Smart Categories</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
