--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -366,4 +366,5 @@
     <string name="tag_friday">friday</string>
     <string name="tag_saturday">saturday</string>
     <string name="tag_sunday">sunday</string>
+    <string name="smart_categories">Smart Categories</string>
 </resources>
