Refactor: Add year filter tag and refactor search tags
- Add filter by year in media search tag and search history.
- Replace month filtering with year in `MediaViewModel`.
- Add `YearTagsGrid` for filtering by year.
- Update `SearchHistoryGrid` to add a `Year` section.

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -364,6 +364,7 @@
     <string name="tag_saturday">saturday</string>
     <string name="tag_sunday">sunday</string>
     <string name="smart_categories">Smart Categories</string>
+    <string name="tag_year">year</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
