--- a/app/src/main/res/values-hr-rHR/strings.xml
+++ b/app/src/main/res/values-hr-rHR/strings.xml
@@ -369,4 +369,5 @@
     <string name="tag_saturday">saturday</string>
     <string name="tag_sunday">sunday</string>
     <string name="smart_categories">Smart Categories</string>
+    <string name="tag_year">year</string>
 </resources>
