Add today and yesterday tags
This commit introduces two new tags, "today" and "yesterday", that filter media based on the current day and the previous day.
It adds the "Today" and "Yesterday" enums and handles them in `MediaViewModel` and `Tags` files.

--- a/app/src/main/res/values-af-rZA/strings.xml
+++ b/app/src/main/res/values-af-rZA/strings.xml
@@ -369,4 +369,6 @@
     <string name="tag_sunday">sunday</string>
     <string name="smart_categories">Smart Categories</string>
     <string name="tag_year">year</string>
+    <string name="tag_today">today</string>
+    <string name="tag_yesterday">yesterday</string>
 </resources>
