--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -365,6 +365,8 @@
     <string name="tag_sunday">sunday</string>
     <string name="smart_categories">Smart Categories</string>
     <string name="tag_year">year</string>
+    <string name="tag_today">today</string>
+    <string name="tag_yesterday">yesterday</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
