--- a/app/src/main/res/values-ro-rRO/strings.xml
+++ b/app/src/main/res/values-ro-rRO/strings.xml
@@ -372,4 +372,12 @@
     <string name="tag_year">year</string>
     <string name="tag_today">today</string>
     <string name="tag_yesterday">yesterday</string>
+    <string name="recent_tag">Recent tag</string>
+    <string name="tag">Tag</string>
+    <string name="album">Album</string>
+    <string name="month">Month</string>
+    <string name="day">Day</string>
+    <string name="year">Year</string>
+    <string name="countries">Countries</string>
+    <string name="localities">Localities</string>
 </resources>
