Refactor Smart Categories UI
- Update `ScannerButton`: changed `maxLines` to `2` and empty the `contentDescription` of `Icon`.
- Update `SmartCategoriesScreen`:
  - change text of "start process" button from "scan for new categories" to "create smart categories".
  - change the `scanForNewText` to "create smart categories".
  - set icon to `Icons.Outlined.Category`.
  - rename "delete all categories" to "delete smart categories".
  - add info row to show "info create smart categories".
- Update `AppBar`: change the `libraryTitle` to `smartCategoriesTitle` and set `Icons.Outlined.Category` to icon.

--- a/app/src/main/res/values-ar-rSA/strings.xml
+++ b/app/src/main/res/values-ar-rSA/strings.xml
@@ -383,4 +383,8 @@
     <string name="year">Year</string>
     <string name="countries">Countries</string>
     <string name="localities">Localities</string>
+    <string name="delete_smart_categories">Delete smart categories</string>
+    <string name="create_smart_categories">Classify media and create smart categories</string>
+    <string name="info_create_smart_categories">The classification of images is performed by an intelligent algorithm directly on this device. No data is sent to any online server. The intelligent algorithm assigns a category to each image based on the objects it recognizes.</string>
+    <string name="info">Information</string>
 </resources>
