Add ability to combine tag searches
This commit introduces the ability to combine tag searches by long-pressing on a tag in the search bar suggestions. A dropdown menu appears offering options to "Combine", "Combine and Search", or just "Search" the selected tag.

- **Combine**: Adds the tag to the current search query without immediately triggering a search.
- **Combine and Search**: Adds the tag to the current search query and then triggers a search with the updated query.
- **Search**: Triggers a search for only the selected tag, replacing the current query.

This functionality enhances the search experience by allowing users to build more complex queries incrementally.

--- a/app/src/main/res/values-ga-rIE/strings.xml
+++ b/app/src/main/res/values-ga-rIE/strings.xml
@@ -388,4 +388,7 @@
     <string name="info">Information</string>
     <string name="slideshow_pause">Pause</string>
     <string name="slideshow_play">Play</string>
+    <string name="menu_combine">Combine %1$s</string>
+    <string name="menu_combine_and_search">Combine %1$s and Search</string>
+    <string name="menu_search">Search %1$s</string>
 </resources>
