--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -381,6 +381,9 @@
     <string name="info">Information</string>
     <string name="slideshow_pause">Pause</string>
     <string name="slideshow_play">Play</string>
+    <string name="menu_combine">Combine %1$s</string>
+    <string name="menu_combine_and_search">Combine %1$s and Search</string>
+    <string name="menu_search">Search %1$s</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
