--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Percorso dei media</string>
     <string name="location_map_cd">Posizione</string>
     <string name="app_dev">di %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Dona</string>
     <string name="github">GitHub</string>
     <string name="donate_button_cd">Tasto per le donazioni</string>
