--- a/app/src/main/res/values-ja-rJP/strings.xml
+++ b/app/src/main/res/values-ja-rJP/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">メディアの位置情報</string>
     <string name="location_map_cd">地図</string>
     <string name="app_dev">作成者: %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">寄付</string>
     <string name="github">GitHub</string>
     <string name="donate_button_cd">寄付ボタン</string>
