--- a/app/src/main/res/values-ru-rRU/strings.xml
+++ b/app/src/main/res/values-ru-rRU/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Расположение медиа</string>
     <string name="location_map_cd">Карта</string>
     <string name="app_dev">от %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Пожертвовать</string>
     <string name="github">GitHub</string>
     <string name="donate_button_cd">Кнопка пожертвования</string>
