--- a/app/src/main/res/values-uk-rUA/strings.xml
+++ b/app/src/main/res/values-uk-rUA/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Розташування медіафайлу</string>
     <string name="location_map_cd">Мапа розташування</string>
     <string name="app_dev">від %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Пожертвувати</string>
     <string name="github">GitHub</string>
     <string name="donate_button_cd">Кнопка пожертви</string>
