--- a/app/src/main/res/values-ar-rSA/strings.xml
+++ b/app/src/main/res/values-ar-rSA/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">موقع الوسائط</string>
     <string name="location_map_cd">خريطة الموقع</string>
     <string name="app_dev">بواسطة %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">تبرع</string>
     <string name="github">غيت هاب</string>
     <string name="donate_button_cd">زر التبرع</string>
