--- a/app/src/main/res/values-cs-rCZ/strings.xml
+++ b/app/src/main/res/values-cs-rCZ/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Umístění médií</string>
     <string name="location_map_cd">Mapa polohy</string>
     <string name="app_dev">od %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Přispět</string>
     <string name="github">GitHub</string>
     <string name="donate_button_cd">Tlačítko přispění</string>
