--- a/app/src/main/res/values-es-rES/strings.xml
+++ b/app/src/main/res/values-es-rES/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Ubicación de archivos</string>
     <string name="location_map_cd">Mapa de ubicaciones</string>
     <string name="app_dev">por %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Donar</string>
     <string name="github">Github</string>
     <string name="donate_button_cd">Botón para donar</string>
