--- a/app/src/main/res/values-fi-rFI/strings.xml
+++ b/app/src/main/res/values-fi-rFI/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Median sijainti</string>
     <string name="location_map_cd">Sijaintikartta</string>
     <string name="app_dev">Kehittänyt: %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Lahjoita</string>
     <string name="github">Github</string>
     <string name="donate_button_cd">Lahjoita-painike</string>
