--- a/app/src/main/res/values-gl-rES/strings.xml
+++ b/app/src/main/res/values-gl-rES/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Localización de arquivos</string>
     <string name="location_map_cd">Mapa de localizacións</string>
     <string name="app_dev">por %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Doar</string>
     <string name="github">Github</string>
     <string name="donate_button_cd">Botón de doar</string>
