--- a/app/src/main/res/values-in-rID/strings.xml
+++ b/app/src/main/res/values-in-rID/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Lokasi Media</string>
     <string name="location_map_cd">Lokasi Map</string>
     <string name="app_dev">Dibuat Oleh %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Donasi</string>
     <string name="github">Github</string>
     <string name="donate_button_cd">Tombol Donasi</string>
