--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">미디어 위치</string>
     <string name="location_map_cd">위치 지도</string>
     <string name="app_dev">by %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">기부하기</string>
     <string name="github">Github</string>
     <string name="donate_button_cd">기부 버튼</string>
