--- a/app/src/main/res/values-nl-rNL/strings.xml
+++ b/app/src/main/res/values-nl-rNL/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Media locatie</string>
     <string name="location_map_cd">Kaartlocatie</string>
     <string name="app_dev">door %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Doneer</string>
     <string name="github">Github</string>
     <string name="donate_button_cd">Doneer knop</string>
