--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Localização da mídia</string>
     <string name="location_map_cd">Mapa de localização</string>
     <string name="app_dev">por %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Doar</string>
     <string name="github">GitHub</string>
     <string name="donate_button_cd">Botão de Doação</string>
