--- a/app/src/main/res/values-ro-rRO/strings.xml
+++ b/app/src/main/res/values-ro-rRO/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Locație media</string>
     <string name="location_map_cd">Harta de amplasare</string>
     <string name="app_dev">de %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Donează</string>
     <string name="github">Github</string>
     <string name="donate_button_cd">Butonul de donație</string>
