--- a/app/src/main/res/values-sr-rSP/strings.xml
+++ b/app/src/main/res/values-sr-rSP/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Локација медија</string>
     <string name="location_map_cd">Мапа локације</string>
     <string name="app_dev">од %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Донирај</string>
     <string name="github">GitHub</string>
     <string name="donate_button_cd">Дугме „Донирај”</string>
