--- a/app/src/main/res/values-sv-rSE/strings.xml
+++ b/app/src/main/res/values-sv-rSE/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Medieplats</string>
     <string name="location_map_cd">Platskarta</string>
     <string name="app_dev">av %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Donera</string>
     <string name="github">Github</string>
     <string name="donate_button_cd">Donera-knapp</string>
