--- a/app/src/main/res/values-vi-rVN/strings.xml
+++ b/app/src/main/res/values-vi-rVN/strings.xml
@@ -51,7 +51,7 @@
     <string name="location_cd">Vị trí phương tiện</string>
     <string name="location_map_cd">Bản đồ vị trí</string>
     <string name="app_dev">bởi %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Ủng hộ</string>
     <string name="github">Github</string>
     <string name="donate_button_cd">Nút ủng hộ</string>
