--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,7 +51,7 @@
     <string name="media_location" translatable="false">@string/location_cd</string>
     <string name="location_map_cd">Location Map</string>
     <string name="app_dev">by %s</string>
-    <string name="app_dev_name">IacobIonut01</string>
+    <string name="app_dev_name">Fast4x</string>
     <string name="donate">Donate</string>
     <string name="github">Github</string>
     <string name="donate_button_cd">Donate Button</string>
