--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -380,6 +380,8 @@
     <string name="menu_combine">Combine %1$s</string>
     <string name="menu_combine_and_search">Combine %1$s and Search</string>
     <string name="menu_search">Search %1$s</string>
+    <string name="nav_albums">Albums</string>
+    <string name="app_name">RiGallery</string>
     <plurals name="item_count">
         <item quantity="one">%s item</item>
         <item quantity="other">%s items</item>
