Feat: Add update check
This commit adds a new feature to check for available updates for the application.

- Introduces a `CheckUpdate` composable in `CheckUpdate.kt` to handle the update check logic. It reads the latest version code from a file and compares it with the current app version.
- Creates a `NewVersionDialog` composable in `CheckUpdate.kt` to display a dialog to the user when a new version is available. The dialog provides an option to open the GitHub releases page.
- Adds a `DefaultDialog` composable in `DefaultDialog.kt` to provide a consistent style for dialogs in the application.
- Includes new drawable assets `downloaded.xml` and `globe.xml` for the update dialog.
- Adds a `checkUpdate` state flow to the `MediaViewModel` to manage the state of the update check preference.
- Defines a `CHECK_UPDATE` boolean preference in `Settings.kt` and a corresponding `rememberCheckUpdate` composable.
- In `MainActivity.kt`, the update check logic is integrated. It fetches the latest version information from a remote file using `OkHttpRequest`. If a new version is detected and the `checkUpdate` preference is enabled, the `NewVersionDialog` is shown.
- In `SettingsScreen.kt`, a new preference item for enabling/disabling the update check feature is added to the settings screen UI.
- Adds a `getVersionCode` composable in `Utils.kt` to retrieve the current version code of the application.

--- a/app/src/main/res/values-ko-rKR/strings.xml
+++ b/app/src/main/res/values-ko-rKR/strings.xml
@@ -382,6 +382,12 @@
     <string name="menu_search">Search %1$s</string>
     <string name="nav_albums">Albums</string>
     <string name="app_name">RiGallery</string>
+    <string name="settings_check_update_title">Check Update</string>
+    <string name="update_available">Update available</string>
+    <string name="app_update_dialog_new">The new version %s can be downloaded!</string>
+    <string name="actions_you_can_do">Actions you can do:</string>
+    <string name="open_the_github_releases_web_page_and_download_latest_version">Open the Github releases web page and download latest version</string>
+    <string name="download_latest_version_from_github_you_will_find_the_file_in_the_notification_area_and_you_can_install_by_clicking_on_it">Download latest version from Github, you will find the file in the notification area and you can install by clicking on it</string>
     <plurals name="item_count">
         <item quantity="other">%s개 항목</item>
     </plurals>
