This commit includes: - Italian localization for the month of May (`tag_may`) in `values-it-rIT/strings.xml`. - Removal of screenshot files in the `screenshots/items` directory. - Code changes in `MediaGrid.kt`, `MediaStaggeredGrid.kt`, and `MediaItemHeader.kt` to handle date localization for headers. The manual string replacement for "Today" and "Yesterday" in `MediaGrid.kt` and `MediaStaggeredGrid.kt` has been removed. The `MediaItemHeader.kt` now includes localization logic for months in addition to "Today" and "Yesterday".

--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -344,7 +344,7 @@
     <string name="tag_february">february</string>
     <string name="tag_march">march</string>
     <string name="tag_april">april</string>
-    <string name="tag_may">may</string>
+    <string name="tag_may">maggio</string>
     <string name="tag_june">june</string>
     <string name="tag_july">july</string>
     <string name="tag_august">august</string>
