--- a/app/src/main/res/values-it-rIT/strings.xml
+++ b/app/src/main/res/values-it-rIT/strings.xml
@@ -388,6 +388,8 @@
     <string name="actions_you_can_do">Azioni che puoi fare:</string>
     <string name="open_the_github_releases_web_page_and_download_latest_version">Apri la pagina web di Github e scarica l\'ultima versione</string>
     <string name="download_latest_version_from_github_you_will_find_the_file_in_the_notification_area_and_you_can_install_by_clicking_on_it">Scarica l\'ultima versione da Github, troverai il file nell\'area di notifica e puoi installarlo cliccando su di esso</string>
+    <string name="request_a_feature_or_suggest_an_idea">Request a feature or suggest an idea</string>
+    <string name="report_an_issue">Report an issue</string>
     <plurals name="item_count">
         <item quantity="one">%s elemento</item>
         <item quantity="other">%s elementi</item>
