--- a/app/src/main/res/values-de-rDE/strings.xml
+++ b/app/src/main/res/values-de-rDE/strings.xml
@@ -388,6 +388,17 @@
     <string name="download_latest_version_from_github_you_will_find_the_file_in_the_notification_area_and_you_can_install_by_clicking_on_it">Laden Sie die aktuelle Version herunter und installieren Sie diese anschließend direkt über den Benachrichtigungsbereich ihres Smartphones</string>
     <string name="request_a_feature_or_suggest_an_idea">Request a feature or suggest an idea</string>
     <string name="report_an_issue">Report an issue</string>
+    <string name="tag_black">black</string>
+    <string name="tag_blue">blue</string>
+    <string name="tag_cyan">cyan</string>
+    <string name="tag_darkgray">darkgray</string>
+    <string name="tag_gray">gray</string>
+    <string name="tag_green">green</string>
+    <string name="tag_lightgray">lightgray</string>
+    <string name="tag_magenta">magenta</string>
+    <string name="tag_red">red</string>
+    <string name="tag_white">white</string>
+    <string name="tag_yellow">yellow</string>
     <plurals name="item_count">
         <item quantity="one">%s Datei</item>
         <item quantity="other">%s Dateien</item>
