--- a/app/src/main/res/values-gl-rES/strings.xml
+++ b/app/src/main/res/values-gl-rES/strings.xml
@@ -399,6 +399,7 @@
     <string name="tag_red">red</string>
     <string name="tag_white">white</string>
     <string name="tag_yellow">yellow</string>
+    <string name="tag_color">color</string>
     <plurals name="item_count">
         <item quantity="one">%s Ítem</item>
         <item quantity="other">%s Ítems</item>
