--- a/app/src/main/res/values-hr-rHR/strings.xml
+++ b/app/src/main/res/values-hr-rHR/strings.xml
@@ -404,4 +404,5 @@
     <string name="tag_red">red</string>
     <string name="tag_white">white</string>
     <string name="tag_yellow">yellow</string>
+    <string name="tag_color">color</string>
 </resources>
