--- a/app/src/main/res/values-pa-rIN/strings.xml
+++ b/app/src/main/res/values-pa-rIN/strings.xml
@@ -403,4 +403,5 @@
     <string name="tag_red">red</string>
     <string name="tag_white">white</string>
     <string name="tag_yellow">yellow</string>
+    <string name="tag_color">color</string>
 </resources>
