--- a/app/src/main/res/values-ru-rBY/strings.xml
+++ b/app/src/main/res/values-ru-rBY/strings.xml
@@ -405,4 +405,5 @@
     <string name="tag_red">red</string>
     <string name="tag_white">white</string>
     <string name="tag_yellow">yellow</string>
+    <string name="tag_color">color</string>
 </resources>
