Update analysis worker notifications with localized strings
This commit updates the notification messages and channel names for `LocationWorker` and `DominantColorWorker` to use localized strings from `R.string`.

- In `LocationWorker`:
    - The notification title is now set to `R.string.analysis_for_location`.
    - The notification message for Android 15 and above is set to `R.string.scanning_in_progress_please_wait`.
    - The notification channel name is set to `R.string.analysis_for_location`.
- In `DominantColorWorker`:
    - The notification title is now set to `R.string.analysis_for_dominant_color`.
    - The notification message for Android 15 and above is set to `R.string.scanning_in_progress_please_wait`.
    - The notification channel name is set to `R.string.analysis_for_dominant_color`.

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -400,6 +400,9 @@
     <string name="tag_white">white</string>
     <string name="tag_yellow">yellow</string>
     <string name="tag_color">color</string>
+    <string name="analysis_for_dominant_color">Analysis for dominant color</string>
+    <string name="scanning_in_progress_please_wait">Scanning in progress, please wait</string>
+    <string name="analysis_for_location">Analysis for location</string>
     <plurals name="item_count">
         <item quantity="other">%s 个项目</item>
     </plurals>
