--- a/app/src/main/res/values-hr-rHR/strings.xml
+++ b/app/src/main/res/values-hr-rHR/strings.xml
@@ -405,4 +405,7 @@
     <string name="tag_white">white</string>
     <string name="tag_yellow">yellow</string>
     <string name="tag_color">color</string>
+    <string name="analysis_for_dominant_color">Analysis for dominant color</string>
+    <string name="scanning_in_progress_please_wait">Scanning in progress, please wait</string>
+    <string name="analysis_for_location">Analysis for location</string>
 </resources>
